<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>User interface to integrate CVAR action clients</description>
  <maintainer email="cvar.upm3@gmail.com">Computer Vision And Aerial Robotics Group (UPM)</maintainer>
  <license>BSD-3</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mutac_msgs</depend>
  <depend>std_msgs</depend>
  <depend>point_task</depend>
  <depend>homebase_serv_cli</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
